Changes for RET 6828, 6745, 6739 and 6728