@@ -80,9 +80,6 @@ class CaseFlagsServiceTest {
     public static final String CLAIMANT_REPRESENTATIVE_NAME = "Claimant Representative Name";
     public static final String REPRESENTATIVE_NAME = "Representative Name";
     public static final String RESPONDENT_NAME = "Respondent Name";
-    private static final String RESPONDENT_NOT_CONTINUING_FLAG_COMMENT =
-            "The claim against the respondent is not continuing";
-    private static final String RESPONDENT_STRUCK_OUT_FLAG_COMMENT = "The respondent has been struck out";
     private CaseFlagsService caseFlagsService;
     private CaseData caseData;
 
@@ -234,6 +231,206 @@ class CaseFlagsServiceTest {
     }
 
     @Test
+    void setupCaseFlags_shouldReuseRespondentRepresentativeFlagsForTheSameRepresentativeWithoutCompactingSlots() {
+        String sharedRepresentativeName = "Shared Representative";
+        String otherRepresentativeName = "Other Representative";
+        caseData.setRepCollection(List.of(
+                representativeItem("1", sharedRepresentativeName),
+                representativeItem("2", sharedRepresentativeName),
+                representativeItem("3", otherRepresentativeName)
+        ));
+
+        caseFlagsService.setupCaseFlags(caseData);
+
+        AllPartyFlags allPartyFlags = allPartyFlags(caseData);
+        assertAll(
+                () -> assertEquals(sharedRepresentativeName, allPartyFlags.getRepresentativeFlags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE1, allPartyFlags.getRepresentativeFlags().getRoleOnCase()),
+                () -> assertEquals(INTERNAL, allPartyFlags.getRepresentativeFlags().getVisibility()),
+                () -> assertEquals(sharedRepresentativeName,
+                        allPartyFlags.getRepresentativeExternalFlags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE1, allPartyFlags.getRepresentativeExternalFlags().getRoleOnCase()),
+                () -> assertEquals(EXTERNAL, allPartyFlags.getRepresentativeExternalFlags().getVisibility()),
+                () -> assertNull(allPartyFlags.getRepresentative1Flags()),
+                () -> assertNull(allPartyFlags.getRepresentative1ExternalFlags()),
+                () -> assertEquals(otherRepresentativeName, allPartyFlags.getRepresentative2Flags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE3, allPartyFlags.getRepresentative2Flags().getRoleOnCase()),
+                () -> assertEquals(INTERNAL, allPartyFlags.getRepresentative2Flags().getVisibility()),
+                () -> assertEquals(otherRepresentativeName,
+                        allPartyFlags.getRepresentative2ExternalFlags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE3,
+                        allPartyFlags.getRepresentative2ExternalFlags().getRoleOnCase()),
+                () -> assertEquals(EXTERNAL, allPartyFlags.getRepresentative2ExternalFlags().getVisibility()),
+                () -> assertFalse(caseFlagsService.caseFlagsSetupRequired(caseData))
+        );
+    }
+
+    @Test
+    void setupCaseFlags_shouldCreateSeparateRespondentRepresentativeFlagsForSameNameWithDifferentEmails() {
+        String sharedRepresentativeName = "Shared Representative";
+        caseData.setRepCollection(List.of(
+                representativeItem("1", sharedRepresentativeName, "first@example.com"),
+                representativeItem("2", sharedRepresentativeName, "second@example.com")
+        ));
+
+        caseFlagsService.setupCaseFlags(caseData);
+        AllPartyFlags allPartyFlags = allPartyFlags(caseData);
+        allPartyFlags.getRepresentativeFlags().setDetails(ListTypeItem.from(activeFlag("First representative flag")));
+        allPartyFlags.getRepresentative1Flags().setDetails(ListTypeItem.from(activeFlag("Second representative flag")));
+
+        caseFlagsService.setupCaseFlags(caseData);
+
+        assertAll(
+                () -> assertEquals(sharedRepresentativeName, allPartyFlags.getRepresentativeFlags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE1, allPartyFlags.getRepresentativeFlags().getRoleOnCase()),
+                () -> assertEquals("First representative flag",
+                        allPartyFlags.getRepresentativeFlags().getDetails().getFirst().getValue().getName()),
+                () -> assertEquals(sharedRepresentativeName, allPartyFlags.getRepresentative1Flags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE2, allPartyFlags.getRepresentative1Flags().getRoleOnCase()),
+                () -> assertEquals("Second representative flag",
+                        allPartyFlags.getRepresentative1Flags().getDetails().getFirst().getValue().getName()),
+                () -> assertFalse(caseFlagsService.caseFlagsSetupRequired(caseData))
+        );
+    }
+
+    @Test
+    void caseFlagsSetupRequired_shouldBeTrueWhenCompactedRepresentativeNeedsMovingToRoleAlignedSlot() {
+        String representative1Name = "Representative 1";
+        String representative2Name = "Representative 2";
+        caseData.setRepCollection(List.of(
+                representativeItem("1", representative1Name),
+                representativeItem("2", representative1Name),
+                representativeItem("3", representative2Name)
+        ));
+        AllPartyFlags allPartyFlags = getOrCreateAllPartyFlags(caseData);
+        allPartyFlags.setCaseFlags(CaseFlagsType.builder().build());
+        allPartyFlags.setRepresentativeFlags(representativeFlags(
+                representative1Name, REPRESENTATIVE1, INTERNAL, "Representative 1 internal flag"));
+        allPartyFlags.setRepresentativeExternalFlags(representativeFlags(
+                representative1Name, REPRESENTATIVE1, EXTERNAL, "Representative 1 external flag"));
+        allPartyFlags.setRepresentative1Flags(representativeFlags(
+                representative2Name, REPRESENTATIVE2, INTERNAL, "Representative 2 compacted internal flag"));
+        allPartyFlags.setRepresentative1ExternalFlags(representativeFlags(
+                representative2Name, REPRESENTATIVE2, EXTERNAL, "Representative 2 compacted external flag"));
+
+        assertTrue(caseFlagsService.caseFlagsSetupRequired(caseData));
+
+        caseFlagsService.setupCaseFlags(caseData);
+
+        assertAll(
+                () -> assertEquals(representative1Name, allPartyFlags.getRepresentativeFlags().getPartyName()),
+                () -> assertEquals(representative1Name,
+                        allPartyFlags.getRepresentativeExternalFlags().getPartyName()),
+                () -> assertNull(allPartyFlags.getRepresentative1Flags()),
+                () -> assertNull(allPartyFlags.getRepresentative1ExternalFlags()),
+                () -> assertEquals(representative2Name, allPartyFlags.getRepresentative2Flags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE3, allPartyFlags.getRepresentative2Flags().getRoleOnCase()),
+                () -> assertEquals(INTERNAL, allPartyFlags.getRepresentative2Flags().getVisibility()),
+                () -> assertEquals("Representative 2 compacted internal flag",
+                        allPartyFlags.getRepresentative2Flags().getDetails().getFirst().getValue().getName()),
+                () -> assertEquals(representative2Name,
+                        allPartyFlags.getRepresentative2ExternalFlags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE3,
+                        allPartyFlags.getRepresentative2ExternalFlags().getRoleOnCase()),
+                () -> assertEquals(EXTERNAL, allPartyFlags.getRepresentative2ExternalFlags().getVisibility()),
+                () -> assertEquals("Representative 2 compacted external flag",
+                        allPartyFlags.getRepresentative2ExternalFlags().getDetails().getFirst().getValue().getName()),
+                () -> assertFalse(caseFlagsService.caseFlagsSetupRequired(caseData))
+        );
+    }
+
+    @Test
+    void setupCaseFlags_shouldPreserveExistingDetailsWhenClearingDuplicateRepresentativeFlags() {
+        String sharedRepresentativeName = "Shared Representative";
+        caseData.setRepCollection(List.of(
+                representativeItem("1", sharedRepresentativeName),
+                representativeItem("2", sharedRepresentativeName)
+        ));
+        caseFlagsService.setupCaseFlags(caseData);
+        allPartyFlags(caseData).getRepresentativeFlags().setDetails(null);
+        allPartyFlags(caseData).getRepresentativeExternalFlags().setDetails(null);
+        allPartyFlags(caseData).setRepresentative1Flags(CaseFlagsType.builder()
+                .partyName(sharedRepresentativeName)
+                .visibility(INTERNAL)
+                .details(ListTypeItem.from(activeFlag("Duplicate internal flag")))
+                .build());
+        allPartyFlags(caseData).setRepresentative1ExternalFlags(CaseFlagsType.builder()
+                .partyName(sharedRepresentativeName)
+                .visibility(EXTERNAL)
+                .details(ListTypeItem.from(activeFlag("Duplicate external flag")))
+                .build());
+
+        caseFlagsService.setupCaseFlags(caseData);
+
+        assertAll(
+                () -> assertEquals("Duplicate internal flag",
+                        allPartyFlags(caseData).getRepresentativeFlags().getDetails().getFirst().getValue().getName()),
+                () -> assertEquals("Duplicate external flag",
+                        allPartyFlags(caseData).getRepresentativeExternalFlags().getDetails().getFirst()
+                                .getValue().getName()),
+                () -> assertNull(allPartyFlags(caseData).getRepresentative1Flags()),
+                () -> assertNull(allPartyFlags(caseData).getRepresentative1ExternalFlags())
+        );
+    }
+
+    @Test
+    void setupCaseFlags_shouldKeepRoleAlignedSlotsWhenClearingDuplicateRepresentativeFlags() {
+        String representative1Name = "Representative 1";
+        String representative2Name = "Representative 2";
+        String representative3Name = "Representative 3";
+        caseData.setRepCollection(List.of(
+                representativeItem("1", representative1Name),
+                representativeItem("2", representative2Name),
+                representativeItem("3", representative2Name),
+                representativeItem("4", representative3Name)
+        ));
+        AllPartyFlags allPartyFlags = getOrCreateAllPartyFlags(caseData);
+        allPartyFlags.setRepresentativeFlags(representativeFlags(
+                representative1Name, REPRESENTATIVE1, INTERNAL, "Representative 1 internal flag"));
+        allPartyFlags.setRepresentative1Flags(representativeFlags(
+                representative2Name, REPRESENTATIVE2, INTERNAL, "Representative 2 internal flag"));
+        allPartyFlags.setRepresentative2Flags(representativeFlags(
+                representative2Name, REPRESENTATIVE3, INTERNAL, "Duplicate representative 2 internal flag"));
+        allPartyFlags.setRepresentative3Flags(representativeFlags(
+                representative3Name, REPRESENTATIVE4, INTERNAL, "Representative 3 internal flag"));
+        allPartyFlags.setRepresentativeExternalFlags(representativeFlags(
+                representative1Name, REPRESENTATIVE1, EXTERNAL, "Representative 1 external flag"));
+        allPartyFlags.setRepresentative1ExternalFlags(representativeFlags(
+                representative2Name, REPRESENTATIVE2, EXTERNAL, "Representative 2 external flag"));
+        allPartyFlags.setRepresentative2ExternalFlags(representativeFlags(
+                representative2Name, REPRESENTATIVE3, EXTERNAL, "Duplicate representative 2 external flag"));
+        allPartyFlags.setRepresentative3ExternalFlags(representativeFlags(
+                representative3Name, REPRESENTATIVE4, EXTERNAL, "Representative 3 external flag"));
+
+        caseFlagsService.setupCaseFlags(caseData);
+
+        assertAll(
+                () -> assertEquals(representative1Name, allPartyFlags.getRepresentativeFlags().getPartyName()),
+                () -> assertEquals("Representative 1 internal flag",
+                        allPartyFlags.getRepresentativeFlags().getDetails().getFirst().getValue().getName()),
+                () -> assertEquals(representative2Name, allPartyFlags.getRepresentative1Flags().getPartyName()),
+                () -> assertEquals("Representative 2 internal flag",
+                        allPartyFlags.getRepresentative1Flags().getDetails().getFirst().getValue().getName()),
+                () -> assertEquals("Duplicate representative 2 internal flag",
+                        allPartyFlags.getRepresentative1Flags().getDetails().get(1).getValue().getName()),
+                () -> assertNull(allPartyFlags.getRepresentative2Flags()),
+                () -> assertNull(allPartyFlags.getRepresentative2ExternalFlags()),
+                () -> assertEquals("Duplicate representative 2 external flag",
+                        allPartyFlags.getRepresentative1ExternalFlags().getDetails().get(1).getValue().getName()),
+                () -> assertEquals(representative3Name, allPartyFlags.getRepresentative3Flags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE4, allPartyFlags.getRepresentative3Flags().getRoleOnCase()),
+                () -> assertEquals("Representative 3 internal flag",
+                        allPartyFlags.getRepresentative3Flags().getDetails().getFirst().getValue().getName()),
+                () -> assertEquals(representative3Name,
+                        allPartyFlags.getRepresentative3ExternalFlags().getPartyName()),
+                () -> assertEquals(REPRESENTATIVE4,
+                        allPartyFlags.getRepresentative3ExternalFlags().getRoleOnCase()),
+                () -> assertEquals("Representative 3 external flag",
+                        allPartyFlags.getRepresentative3ExternalFlags().getDetails().getFirst().getValue().getName())
+        );
+    }
+
+    @Test
     void setupCaseFlags_shouldNotCreateClaimantRepresentativeFlagsWhenClaimantRepresentativeIsAbsent() {
         caseData.setRepresentativeClaimantType(null);
 
@@ -280,7 +477,7 @@ class CaseFlagsServiceTest {
     }
 
     @Test
-    void inactivateCaseFlags_shouldSetAllMatchingRespondentFlagDetailsInactive() {
+    void inactivateRespondentCaseFlags_shouldSetAllMatchingRespondentFlagDetailsInactive() {
         caseFlagsService.setupCaseFlags(caseData);
         CaseFlagsType respondentInternalFlags = allPartyFlags(caseData).getRespondent1Flags();
         respondentInternalFlags.setDetails(ListTypeItem.from(
@@ -295,17 +492,14 @@ class CaseFlagsServiceTest {
         otherRespondentFlags.setDetails(ListTypeItem.from(activeFlag("Other respondent flag")));
         claimantFlags.setDetails(ListTypeItem.from(activeFlag("Claimant flag")));
 
-        caseFlagsService.inactivateCaseFlags(caseData, respondentName(1), RESPONDENT_NOT_CONTINUING_FLAG_COMMENT);
+        caseFlagsService.inactivateRespondentCaseFlags(caseData, respondentName(1));
 
         assertEquals(INACTIVE, respondentInternalFlags.getDetails().get(0).getValue().getStatus());
         assertEquals(INACTIVE, respondentInternalFlags.getDetails().get(1).getValue().getStatus());
         assertEquals(INACTIVE, respondentExternalFlags.getDetails().getFirst().getValue().getStatus());
-        assertEquals(RESPONDENT_NOT_CONTINUING_FLAG_COMMENT,
-                respondentInternalFlags.getDetails().get(0).getValue().getFlagComment());
-        assertEquals(RESPONDENT_NOT_CONTINUING_FLAG_COMMENT,
-                respondentInternalFlags.getDetails().get(1).getValue().getFlagComment());
-        assertEquals(RESPONDENT_NOT_CONTINUING_FLAG_COMMENT,
-                respondentExternalFlags.getDetails().getFirst().getValue().getFlagComment());
+        assertNull(respondentInternalFlags.getDetails().get(0).getValue().getFlagComment());
+        assertNull(respondentInternalFlags.getDetails().get(1).getValue().getFlagComment());
+        assertNull(respondentExternalFlags.getDetails().getFirst().getValue().getFlagComment());
         assertEquals(ACTIVE, otherRespondentFlags.getDetails().getFirst().getValue().getStatus());
         assertEquals(ACTIVE, claimantFlags.getDetails().getFirst().getValue().getStatus());
         assertNull(otherRespondentFlags.getDetails().getFirst().getValue().getFlagComment());
@@ -313,35 +507,260 @@ class CaseFlagsServiceTest {
     }
 
     @Test
-    void inactivateCaseFlags_shouldUseProvidedCommentWhenInactivatingRespondentFlags() {
-        caseFlagsService.setupCaseFlags(caseData);
-        CaseFlagsType respondentInternalFlags = allPartyFlags(caseData).getRespondentFlags();
-        CaseFlagsType respondentExternalFlags = allPartyFlags(caseData).getRespondentExternalFlags();
-        respondentInternalFlags.setDetails(ListTypeItem.from(activeFlag("Internal flag")));
-        respondentExternalFlags.setDetails(ListTypeItem.from(activeFlag("External flag")));
-
-        caseFlagsService.inactivateCaseFlags(caseData, RESPONDENT_NAME, RESPONDENT_STRUCK_OUT_FLAG_COMMENT);
-
-        assertEquals(INACTIVE, respondentInternalFlags.getDetails().getFirst().getValue().getStatus());
-        assertEquals(INACTIVE, respondentExternalFlags.getDetails().getFirst().getValue().getStatus());
-        assertEquals(RESPONDENT_STRUCK_OUT_FLAG_COMMENT,
-                respondentInternalFlags.getDetails().getFirst().getValue().getFlagComment());
-        assertEquals(RESPONDENT_STRUCK_OUT_FLAG_COMMENT,
-                respondentExternalFlags.getDetails().getFirst().getValue().getFlagComment());
-    }
-
-    @Test
-    void inactivateCaseFlags_shouldIgnoreMissingPartyFlagsAndDetails() {
-        caseFlagsService.inactivateCaseFlags(caseData, RESPONDENT_NAME, RESPONDENT_NOT_CONTINUING_FLAG_COMMENT);
+    void inactivateRespondentCaseFlags_shouldIgnoreMissingPartyFlagsAndDetails() {
+        caseFlagsService.inactivateRespondentCaseFlags(caseData, RESPONDENT_NAME);
 
         assertNull(caseData.getAllPartyFlags());
 
         caseFlagsService.setupCaseFlags(caseData);
         allPartyFlags(caseData).getRespondentFlags().setDetails(null);
 
-        caseFlagsService.inactivateCaseFlags(caseData, RESPONDENT_NAME, RESPONDENT_NOT_CONTINUING_FLAG_COMMENT);
+        caseFlagsService.inactivateRespondentCaseFlags(caseData, RESPONDENT_NAME);
 
         assertNull(allPartyFlags(caseData).getRespondentFlags().getDetails());
+    }
+
+    @Test
+    void inactivateRespondentRepresentativeCaseFlags_shouldInactivateRepresentativeWithNoOtherActiveRespondents() {
+        setupRepresentativeAccessScenario();
+        RespondentSumTypeItem respondent1 = caseData.getRespondentCollection().getFirst();
+        AllPartyFlags allPartyFlags = allPartyFlags(caseData);
+        allPartyFlags.getRepresentativeFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 1 internal flag")));
+        allPartyFlags.getRepresentativeExternalFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 1 external flag")));
+        allPartyFlags.getRepresentative1Flags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 2 internal flag")));
+
+        respondent1.getValue().setResponseStruckOut(YES);
+
+        caseFlagsService.inactivateRespondentRepresentativeCaseFlags(caseData, respondent1);
+
+        assertAll(
+                () -> assertEquals(INACTIVE, firstFlagStatus(allPartyFlags.getRepresentativeFlags())),
+                () -> assertEquals(INACTIVE, firstFlagStatus(allPartyFlags.getRepresentativeExternalFlags())),
+                () -> assertNull(firstFlagComment(allPartyFlags.getRepresentativeFlags())),
+                () -> assertNull(firstFlagComment(allPartyFlags.getRepresentativeExternalFlags())),
+                () -> assertEquals(ACTIVE, firstFlagStatus(allPartyFlags.getRepresentative1Flags()))
+        );
+    }
+
+    @Test
+    void inactivateRespondentRepresentativeCaseFlags_shouldKeepSharedRepresentativeActiveUntilAllInactive() {
+        setupRepresentativeAccessScenario();
+        RespondentSumTypeItem respondent3 = caseData.getRespondentCollection().get(2);
+        AllPartyFlags allPartyFlags = allPartyFlags(caseData);
+        allPartyFlags.getRepresentative1Flags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 2 internal flag")));
+        allPartyFlags.getRepresentative1ExternalFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 2 external flag")));
+
+        respondent3.getValue().setResponseContinue(NO);
+        caseFlagsService.inactivateRespondentRepresentativeCaseFlags(caseData, respondent3);
+
+        assertAll(
+                () -> assertEquals(ACTIVE, firstFlagStatus(allPartyFlags.getRepresentative1Flags())),
+                () -> assertEquals(ACTIVE, firstFlagStatus(allPartyFlags.getRepresentative1ExternalFlags()))
+        );
+
+        RespondentSumTypeItem respondent2 = caseData.getRespondentCollection().get(1);
+        respondent2.getValue().setResponseStruckOut(YES);
+        caseFlagsService.inactivateRespondentRepresentativeCaseFlags(caseData, respondent2);
+
+        assertAll(
+                () -> assertEquals(INACTIVE, firstFlagStatus(allPartyFlags.getRepresentative1Flags())),
+                () -> assertEquals(INACTIVE, firstFlagStatus(allPartyFlags.getRepresentative1ExternalFlags())),
+                () -> assertNull(firstFlagComment(allPartyFlags.getRepresentative1Flags())),
+                () -> assertNull(firstFlagComment(allPartyFlags.getRepresentative1ExternalFlags()))
+        );
+    }
+
+    @Test
+    void setupCaseFlags_shouldKeepDetailsWhenRepresentativeSlotsSwapAfterRespondentReorder() {
+        caseData.setRespondentCollection(respondentCollection(4));
+        List<RespondentSumTypeItem> respondents = caseData.getRespondentCollection();
+        caseData.setRepCollection(List.of(
+                representativeItemForRespondent("1", "Representative 1", "rep1@example.com", respondents.get(0)),
+                representativeItemForRespondent("4", "Representative 3", "rep3@example.com", respondents.get(3)),
+                representativeItemForRespondent("2", "Representative 2", "rep2@example.com", respondents.get(1)),
+                representativeItemForRespondent("3", "Representative 2", "rep2@example.com", respondents.get(2))
+        ));
+        AllPartyFlags allPartyFlags = getOrCreateAllPartyFlags(caseData);
+        allPartyFlags.setCaseFlags(CaseFlagsType.builder().build());
+        allPartyFlags.setRepresentativeFlags(representativeFlags(
+                "Representative 1", REPRESENTATIVE1, INTERNAL, "Representative 1 internal flag"));
+        allPartyFlags.setRepresentative1Flags(representativeFlags(
+                "Representative 2", REPRESENTATIVE2, INTERNAL, "Representative 2 internal flag"));
+        allPartyFlags.setRepresentative2Flags(representativeFlags(
+                "Representative 3", REPRESENTATIVE3, INTERNAL, "Representative 3 internal flag"));
+        allPartyFlags.setRepresentativeExternalFlags(representativeFlags(
+                "Representative 1", REPRESENTATIVE1, EXTERNAL, "Representative 1 external flag"));
+        allPartyFlags.setRepresentative1ExternalFlags(representativeFlags(
+                "Representative 2", REPRESENTATIVE2, EXTERNAL, "Representative 2 external flag"));
+        allPartyFlags.setRepresentative2ExternalFlags(representativeFlags(
+                "Representative 3", REPRESENTATIVE3, EXTERNAL, "Representative 3 external flag"));
+        inactivateCaseFlags(allPartyFlags.getRepresentative1Flags());
+        inactivateCaseFlags(allPartyFlags.getRepresentative1ExternalFlags());
+
+        caseFlagsService.setupCaseFlags(caseData);
+
+        assertAll(
+                () -> assertRepresentativeFlags(
+                        allPartyFlags.getRepresentative1Flags(),
+                        "Representative 3",
+                        REPRESENTATIVE2,
+                        ACTIVE,
+                        "Representative 3 internal flag"
+                ),
+                () -> assertRepresentativeFlags(
+                        allPartyFlags.getRepresentative1ExternalFlags(),
+                        "Representative 3",
+                        REPRESENTATIVE2,
+                        ACTIVE,
+                        "Representative 3 external flag"
+                ),
+                () -> assertRepresentativeFlags(
+                        allPartyFlags.getRepresentative2Flags(),
+                        "Representative 2",
+                        REPRESENTATIVE3,
+                        INACTIVE,
+                        "Representative 2 internal flag"
+                ),
+                () -> assertRepresentativeFlags(
+                        allPartyFlags.getRepresentative2ExternalFlags(),
+                        "Representative 2",
+                        REPRESENTATIVE3,
+                        INACTIVE,
+                        "Representative 2 external flag"
+                ),
+                () -> assertNull(allPartyFlags.getRepresentative3Flags()),
+                () -> assertNull(allPartyFlags.getRepresentative3ExternalFlags())
+        );
+    }
+
+    @Test
+    void clearRespondentRepresentativeFlags_shouldRemoveMatchingRepresentativeIndexFlagDetailsOnly() {
+        caseFlagsService.setupCaseFlags(caseData);
+        CaseFlagsType representativeInternalFlags = allPartyFlags(caseData).getRepresentative1Flags();
+        CaseFlagsType representativeExternalFlags = allPartyFlags(caseData).getRepresentative1ExternalFlags();
+        CaseFlagsType otherRepresentativeFlags = allPartyFlags(caseData).getRepresentative2Flags();
+        representativeInternalFlags.setDetails(ListTypeItem.from(activeFlag("Representative internal flag")));
+        representativeExternalFlags.setDetails(ListTypeItem.from(activeFlag("Representative external flag")));
+        otherRepresentativeFlags.setDetails(ListTypeItem.from(activeFlag("Other representative flag")));
+        CaseFlagsType respondentFlags = allPartyFlags(caseData).getRespondent1Flags();
+        respondentFlags.setDetails(ListTypeItem.from(activeFlag("Respondent flag")));
+
+        caseFlagsService.clearRespondentRepresentativeFlags(caseData, List.of(1));
+
+        assertNull(representativeInternalFlags.getDetails());
+        assertNull(representativeExternalFlags.getDetails());
+        assertEquals(ACTIVE, otherRepresentativeFlags.getDetails().getFirst().getValue().getStatus());
+        assertEquals(ACTIVE, respondentFlags.getDetails().getFirst().getValue().getStatus());
+    }
+
+    @Test
+    void setupCaseFlags_shouldMoveRespondentFlagsWithRespondentWhenCollectionIsReordered() {
+        caseData.setRespondentCollection(respondentCollection(3));
+        caseFlagsService.setupCaseFlags(caseData);
+        allPartyFlags(caseData).getRespondent1Flags()
+                .setDetails(ListTypeItem.from(activeFlag("Respondent 2 internal flag")));
+        allPartyFlags(caseData).getRespondent1ExternalFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Respondent 2 external flag")));
+        allPartyFlags(caseData).getRespondent2Flags()
+                .setDetails(ListTypeItem.from(activeFlag("Respondent 3 internal flag")));
+        allPartyFlags(caseData).getRespondent2ExternalFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Respondent 3 external flag")));
+
+        caseFlagsService.inactivateRespondentCaseFlags(caseData, respondentName(1));
+        caseData.setRespondentCollection(List.of(
+                caseData.getRespondentCollection().get(0),
+                caseData.getRespondentCollection().get(2),
+                caseData.getRespondentCollection().get(1)
+        ));
+        caseFlagsService.setupCaseFlags(caseData);
+
+        CaseFlagsType secondRespondentInternalFlags = allPartyFlags(caseData).getRespondent1Flags();
+        assertEquals(respondentName(2), secondRespondentInternalFlags.getPartyName());
+        assertEquals(RESPONDENT2, secondRespondentInternalFlags.getRoleOnCase());
+        assertEquals(RESPONDENT2, secondRespondentInternalFlags.getGroupId());
+        assertEquals(ACTIVE, secondRespondentInternalFlags.getDetails().getFirst().getValue().getStatus());
+        assertEquals("Respondent 3 internal flag",
+                secondRespondentInternalFlags.getDetails().getFirst().getValue().getName());
+
+        CaseFlagsType secondRespondentExternalFlags = allPartyFlags(caseData).getRespondent1ExternalFlags();
+        assertEquals(respondentName(2), secondRespondentExternalFlags.getPartyName());
+        assertEquals(RESPONDENT2, secondRespondentExternalFlags.getRoleOnCase());
+        assertEquals(RESPONDENT2, secondRespondentExternalFlags.getGroupId());
+        assertEquals(ACTIVE, secondRespondentExternalFlags.getDetails().getFirst().getValue().getStatus());
+        assertEquals("Respondent 3 external flag",
+                secondRespondentExternalFlags.getDetails().getFirst().getValue().getName());
+
+        CaseFlagsType discontinuedRespondentInternalFlags = allPartyFlags(caseData).getRespondent2Flags();
+        assertEquals(respondentName(1), discontinuedRespondentInternalFlags.getPartyName());
+        assertEquals(RESPONDENT3, discontinuedRespondentInternalFlags.getRoleOnCase());
+        assertEquals(RESPONDENT3, discontinuedRespondentInternalFlags.getGroupId());
+        assertEquals(INACTIVE, discontinuedRespondentInternalFlags.getDetails().getFirst().getValue().getStatus());
+        assertNull(discontinuedRespondentInternalFlags.getDetails().getFirst().getValue().getFlagComment());
+        assertEquals("Respondent 2 internal flag",
+                discontinuedRespondentInternalFlags.getDetails().getFirst().getValue().getName());
+
+        CaseFlagsType discontinuedRespondentExternalFlags = allPartyFlags(caseData).getRespondent2ExternalFlags();
+        assertEquals(respondentName(1), discontinuedRespondentExternalFlags.getPartyName());
+        assertEquals(RESPONDENT3, discontinuedRespondentExternalFlags.getRoleOnCase());
+        assertEquals(RESPONDENT3, discontinuedRespondentExternalFlags.getGroupId());
+        assertEquals(INACTIVE, discontinuedRespondentExternalFlags.getDetails().getFirst().getValue().getStatus());
+        assertNull(discontinuedRespondentExternalFlags.getDetails().getFirst().getValue().getFlagComment());
+        assertEquals("Respondent 2 external flag",
+                discontinuedRespondentExternalFlags.getDetails().getFirst().getValue().getName());
+    }
+
+    @Test
+    void setupCaseFlags_shouldMoveRepresentativeFlagsWithRepresentativeWhenCollectionIsReordered() {
+        caseData.setRepCollection(representativeCollection(3));
+        caseFlagsService.setupCaseFlags(caseData);
+        allPartyFlags(caseData).getRepresentative1Flags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 2 internal flag")));
+        allPartyFlags(caseData).getRepresentative1ExternalFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 2 external flag")));
+        allPartyFlags(caseData).getRepresentative2Flags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 3 internal flag")));
+        allPartyFlags(caseData).getRepresentative2ExternalFlags()
+                .setDetails(ListTypeItem.from(activeFlag("Representative 3 external flag")));
+
+        caseData.setRepCollection(List.of(
+                caseData.getRepCollection().get(0),
+                caseData.getRepCollection().get(2),
+                caseData.getRepCollection().get(1)
+        ));
+        caseFlagsService.setupCaseFlags(caseData);
+
+        CaseFlagsType secondRepresentativeInternalFlags = allPartyFlags(caseData).getRepresentative1Flags();
+        assertEquals(representativeName(2), secondRepresentativeInternalFlags.getPartyName());
+        assertEquals(REPRESENTATIVE2, secondRepresentativeInternalFlags.getRoleOnCase());
+        assertEquals(REPRESENTATIVE2, secondRepresentativeInternalFlags.getGroupId());
+        assertEquals("Representative 3 internal flag",
+                secondRepresentativeInternalFlags.getDetails().getFirst().getValue().getName());
+
+        CaseFlagsType secondRepresentativeExternalFlags = allPartyFlags(caseData).getRepresentative1ExternalFlags();
+        assertEquals(representativeName(2), secondRepresentativeExternalFlags.getPartyName());
+        assertEquals(REPRESENTATIVE2, secondRepresentativeExternalFlags.getRoleOnCase());
+        assertEquals(REPRESENTATIVE2, secondRepresentativeExternalFlags.getGroupId());
+        assertEquals("Representative 3 external flag",
+                secondRepresentativeExternalFlags.getDetails().getFirst().getValue().getName());
+
+        CaseFlagsType thirdRepresentativeInternalFlags = allPartyFlags(caseData).getRepresentative2Flags();
+        assertEquals(representativeName(1), thirdRepresentativeInternalFlags.getPartyName());
+        assertEquals(REPRESENTATIVE3, thirdRepresentativeInternalFlags.getRoleOnCase());
+        assertEquals(REPRESENTATIVE3, thirdRepresentativeInternalFlags.getGroupId());
+        assertEquals("Representative 2 internal flag",
+                thirdRepresentativeInternalFlags.getDetails().getFirst().getValue().getName());
+
+        CaseFlagsType thirdRepresentativeExternalFlags = allPartyFlags(caseData).getRepresentative2ExternalFlags();
+        assertEquals(representativeName(1), thirdRepresentativeExternalFlags.getPartyName());
+        assertEquals(REPRESENTATIVE3, thirdRepresentativeExternalFlags.getRoleOnCase());
+        assertEquals(REPRESENTATIVE3, thirdRepresentativeExternalFlags.getGroupId());
+        assertEquals("Representative 2 external flag",
+                thirdRepresentativeExternalFlags.getDetails().getFirst().getValue().getName());
     }
 
     @Test
@@ -407,8 +826,9 @@ class CaseFlagsServiceTest {
 
     @ParameterizedTest(name = "{0}")
     @MethodSource("respondentRepresentativePartyFlagSlots")
-    void setupCaseFlags_shouldUpdateRespondentRepresentativeFlagsWhenNameChanges(FlagSlot slot) {
+    void setupCaseFlags_shouldRemoveRespondentRepresentativeFlagDetailsWhenNameChanges(FlagSlot slot) {
         caseFlagsService.setupCaseFlags(caseData);
+        Objects.requireNonNull(slot.get(caseData)).setDetails(ListTypeItem.from(activeFlag("Previous rep flag")));
         String updatedRepresentativeName = "Updated " + slot;
         caseData.getRepCollection()
                 .get(slot.representativeIndex)
@@ -421,6 +841,7 @@ class CaseFlagsServiceTest {
         assertEquals(slot.roleOnCase, Objects.requireNonNull(slot.get(caseData)).getRoleOnCase());
         assertEquals(slot.roleOnCase, Objects.requireNonNull(slot.get(caseData)).getGroupId());
         assertEquals(slot.visibility, Objects.requireNonNull(slot.get(caseData)).getVisibility());
+        assertNull(Objects.requireNonNull(slot.get(caseData)).getDetails());
     }
 
     @Test
@@ -816,6 +1237,51 @@ class CaseFlagsServiceTest {
         return representativeCollection;
     }
 
+    private static RepresentedTypeRItem representativeItem(String id, String name) {
+        RepresentedTypeR representative = RepresentedTypeR.builder()
+                .nameOfRepresentative(name)
+                .build();
+        return representativeItem(id, representative);
+    }
+
+    private static RepresentedTypeRItem representativeItem(String id, String name, String email) {
+        RepresentedTypeR representative = RepresentedTypeR.builder()
+                .nameOfRepresentative(name)
+                .representativeEmailAddress(email)
+                .build();
+        return representativeItem(id, representative);
+    }
+
+    private static RepresentedTypeRItem representativeItem(String id, RepresentedTypeR representative) {
+        RepresentedTypeRItem representativeItem = new RepresentedTypeRItem();
+        representativeItem.setId(id);
+        representativeItem.setValue(representative);
+        return representativeItem;
+    }
+
+    private static RepresentedTypeRItem representativeItemForRespondent(
+            String id, String name, String email, RespondentSumTypeItem respondent) {
+        RepresentedTypeR representative = RepresentedTypeR.builder()
+                .nameOfRepresentative(name)
+                .representativeEmailAddress(email)
+                .respondentId(respondent.getId())
+                .respRepName(respondent.getValue().getRespondentName())
+                .build();
+        return representativeItem(id, representative);
+    }
+
+    private void setupRepresentativeAccessScenario() {
+        caseData.setRespondentCollection(respondentCollection(4));
+        List<RespondentSumTypeItem> respondents = caseData.getRespondentCollection();
+        caseData.setRepCollection(List.of(
+                representativeItemForRespondent("1", "Representative 1", "rep1@example.com", respondents.get(0)),
+                representativeItemForRespondent("2", "Representative 2", "rep2@example.com", respondents.get(1)),
+                representativeItemForRespondent("3", "Representative 2", "rep2@example.com", respondents.get(2)),
+                representativeItemForRespondent("4", "Representative 3", "rep3@example.com", respondents.get(3))
+        ));
+        caseFlagsService.setupCaseFlags(caseData);
+    }
+
     private static String respondentName(int index) {
         return index == 0 ? RESPONDENT_NAME : RESPONDENT_NAME + " " + (index + 1);
     }
@@ -845,11 +1311,44 @@ class CaseFlagsServiceTest {
         );
     }
 
+    private static CaseFlagsType representativeFlags(
+            String partyName, String roleOnCase, String visibility, String flagName) {
+        return CaseFlagsType.builder()
+                .partyName(partyName)
+                .roleOnCase(roleOnCase)
+                .groupId(roleOnCase)
+                .visibility(visibility)
+                .details(ListTypeItem.from(activeFlag(flagName)))
+                .build();
+    }
+
     private static FlagDetailType activeFlag(String name) {
         return FlagDetailType.builder()
                 .name(name)
                 .status(ACTIVE)
                 .build();
+    }
+
+    private static String firstFlagStatus(CaseFlagsType flags) {
+        return flags.getDetails().getFirst().getValue().getStatus();
+    }
+
+    private static String firstFlagComment(CaseFlagsType flags) {
+        return flags.getDetails().getFirst().getValue().getFlagComment();
+    }
+
+    private static void inactivateCaseFlags(CaseFlagsType flags) {
+        flags.getDetails().stream()
+                .forEach(flag -> flag.getValue().setStatus(INACTIVE));
+    }
+
+    private static void assertRepresentativeFlags(
+            CaseFlagsType flags, String partyName, String roleOnCase, String status, String flagName) {
+        assertEquals(partyName, flags.getPartyName());
+        assertEquals(roleOnCase, flags.getRoleOnCase());
+        assertEquals(roleOnCase, flags.getGroupId());
+        assertEquals(status, firstFlagStatus(flags));
+        assertEquals(flagName, flags.getDetails().getFirst().getValue().getName());
     }
 
     private static GenericTseApplicationTypeItem tseApplication(
